# HandGenerator_Windows

./: .gitignore  CMakeLists.txt  README.txt  README_COMPILE_WINDOWS.txt  readme.md
lib/: glew32.exp  glew32.lib  glew32s.lib
src/: Hand.cpp  Hand.h  HandGenerator.cpp  HandGenerator.h  HandGenerator_C.cpp  HandGenerator_C.h  HandGenerator_Test.cpp  HandStructs.h  Main.cpp
